<resources>
    <string name="app_name">On The Go</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ *</string>
    <string name="new_password">Mật khẩu mới *</string>
    <string name="confirm_new_password">Xác nhận mật khẩu mới *</string>
    <string name="password_confirm_invalid">Mật khẩu không khớp</string>
    <string name="profile">Thông tin cá nhân</string>
    <string name="prompt_email">Email *</string>
    <string name="prompt_password">Mật khẩu *</string>
    <string name="log_in">Đăng nhập</string>
    <string name="sign_up">Đăng kí</string>
    <string name="full_name">Họ và tên *</string>
    <string name="DOB">Ngày sinh</string>
    <string name="address">Địa chỉ</string>
    <string name="welcome">"Xin chào "</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="invalid_password">Mật khẩu phải có ít nhất 6 kí tự</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="sign_up_failed">Đăng kí thất bại</string>
    <string name="no_empty">Không được bỏ trống</string>
    <string name="go">Go</string>
    <string name="trip">Chuyến đi của bạn</string>
    <string name="trip_info">Thông tin chuyến đi</string>
    <string name="destinations">Điểm đến</string>
    <string name="transport">Phương tiện</string>
    <string name="stay">Nơi ở</string>
    <string name="food">Ăn uống</string>
    <string name="search">Tìm kiếm theo tên</string>
    <string name="exitDialog">Thoát chương trình?</string>
    <string name="logOut">Đăng xuất</string>
    <string name="exit">Thoát</string>
    <string name="forgotPassword">Quên mật khẩu</string>
    <string name="empty_trip">Bạn chưa có chuyến đi nào</string>
    <string name="new_trip">Chuyến đi mới</string>
    <string name="exist_trip">Chuyến đi có sẵn</string>
    <string name="hint_name">Chưa đặt tên</string>
    <string name="hint_empty">Chưa biết</string>
    <string name="admin">Bạn là admin!</string>
    <string name="trip_change">Chuyến đi</string>
    <string name="users">Người dùng</string>
    <string name="list_user">Danh sách người dùng</string>
    <string name="delete_user">Xóa người dùng</string>
    <string name="add_user">Thêm người dùng mới</string>
    <string name="add">Thêm</string>

    <string-array name="cities">
        <item>Địa chỉ</item>
        <item>An Giang</item>
        <item>Bà Rịa – Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>TP Hồ Chí Minh</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>
    </string-array>
    <string-array name="sortDestinations">
        <item>Theo số người đánh giá: Cao -> thấp</item>
        <item>Theo số người đánh giá: Thấp -> cao</item>
        <item>Theo đánh giá: Cao -> thấp</item>
        <item>Theo đánh giá: Thấp -> cao</item>
        <item>Theo tên: A -> Z</item>
        <item>Theo tên: Z -> A</item>
    </string-array>
    <string-array name="sortTrips">
        <item>Theo ngày thêm: Gần -> xa</item>
        <item>Theo ngày thêm: Xa -> gần</item>
        <item>Theo tên: A -> Z</item>
        <item>Theo tên: Z -> A</item>
    </string-array>
    <string-array name="sortUser">
        <item>Theo ID: Cao -> thấp</item>
        <item>Theo ID: Thấp -> cao</item>
        <item>Theo tên: A -> Z</item>
        <item>Theo tên: Z -> A</item>
    </string-array>
    <string-array name="spi_des">
        <item> Chưa rõ</item>
        <item> Nơi ở</item>
        <item> Quán ăn</item>
        <item> Di chuyển</item>
    </string-array>
</resources>