<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ChangePasswordActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/changePwd_oldPassword_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:layout_margin="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/changePwd_oldPassword_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/old_password"
            android:selectAllOnFocus="true"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/changePwd_oldPassword_label"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/changePwd_newPassword_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:layout_margin="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePwd_oldPassword_edit"/>
        <EditText
            android:id="@+id/changePwd_newPassword_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:selectAllOnFocus="true"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/changePwd_newPassword_label"/>
        <TextView
            android:id="@+id/changePwd_newPasswordConfirm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_password"
            android:layout_margin="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePwd_newPassword_edit"/>

        <EditText
            android:id="@+id/changePwd_newPasswordConfirm_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:hint="@string/confirm_new_password"
            app:layout_constraintTop_toBottomOf="@+id/changePwd_newPasswordConfirm_label" />

        <Button
            android:id="@+id/changePwd_action_button"
            style="@style/successMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:text="@string/change_password"
            app:layout_constraintTop_toBottomOf="@+id/changePwd_newPasswordConfirm_edit" />
        <ProgressBar
            android:id="@+id/changePwd_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            android:background="@drawable/white_circle"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>